--- a/conf/mod_boss_announcer.conf.dist
+++ b/conf/mod_boss_announcer.conf.dist
@@ -1,13 +1,13 @@
 [worldserver]
 
 ###################################################################################################
-#	Learn spells on level-up
+#	Announce if a world boss killed by someone
 ###################################################################################################
 
 # Enable the module? (1: true | 0: false)
 
-LearnSpells.Enable = 1
+Boss.Announcer.Enable = 1
 
 # Announce the module when the player logs in?
 
-LearnSpells.Announce = 1
+Boss.Announcer.Announce = 1
