Rework of module  (#1)
* Rework of the script

* Update

* Fixed crash issue if both players are not in a guild.

* Added skull icon for heroic mode, Thanks Fall1n for finding the location of the icon

* Added possible group and removed the icon

* Remove aura upon boss kill

* Update so server does not have to be restarted to enable/disable features now need todo .reload command

* Update README.md

* fixed a crash issue

* Fixed crash issue.

If a solo player managed to kill boss in any raid it would cause a crash as we was trying to get the leader of party.

--- a/conf/mod_boss_announcer.conf.dist
+++ b/conf/mod_boss_announcer.conf.dist
@@ -11,3 +11,7 @@ Boss.Announcer.Enable = 1
 # Announce the module when the player logs in?
 
 Boss.Announcer.Announce = 1
+
+# Remove Aura such as bloodlust debuff upon boss kill?
+
+Boss.Announcer.RemoveAuraUponKill = 0
